[package]
name = "meshcorebot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
config = "0.15.19"
futures-util = "0.3.32"
meshcore-rs = "0.1.6"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.44"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[patch.crates-io]
# Contains a fix to a CMD_SET_CHANNEL bug
meshcore-rs = { git = "https://github.com/hades/meshcore-rs.git" }
